update file org

--- a/tox.ini
+++ b/tox.ini
@@ -18,4 +18,5 @@ deps =
     {[tox]deps}
 
 commands =
+    python -c "from scripts.file_org import prepare_dirs; prepare_dirs()" 
     python -m unittest discover
