add prepare data

--- a/tox.ini
+++ b/tox.ini
@@ -19,5 +19,6 @@ deps =
     {[tox]deps}
 
 commands =
-    python -c "from scripts.file_org import prepare_dirs; prepare_dirs()" 
+    python -c "from scripts.file_org import prepare_dirs; prepare_dirs()"
+    python -c "from scripts.prepare_data import main; main()"
     python -m unittest discover
