--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     ipywidgets
     scikit-learn
     dill
+    openpyxl
     
 [testenv]
 deps =
@@ -22,3 +23,6 @@ commands =
     python -c "from scripts.file_org import prepare_dirs; prepare_dirs()"
     python -c "from scripts.prepare_data import main; main()"
     python -m unittest discover
+    python -c "from scripts.run_models import train_models; train_models()"
+    python -c "from scripts.run_models import predict_models; predict_models('test')"
+    python -c "from scripts.eval_predictions import eval_predictions; eval_predictions()"
