--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ deps =
     {[tox]deps}
 
 commands =
+    python -c "import nltk; nltk.download('punkt')"
+    python -c "import nltk; nltk.download('stopwords')"
     python -c "from scripts.file_org import prepare_dirs; prepare_dirs()"
     python -c "from scripts.prepare_data import main; main()"
     python -m unittest discover
