--- a/tox.ini
+++ b/tox.ini
@@ -22,11 +22,12 @@ deps =
     {[tox]deps}
 
 commands =
-    python -c "import nltk; nltk.download('punkt')"
+    ; python -c "import nltk; nltk.download('punkt')"
     ; python -c "import nltk; nltk.download('stopwords')"
     python -c "from scripts.file_org import prepare_dirs; prepare_dirs()"
     python -c "from scripts.prepare_data import main; main()"
-    ; python -m unittest discover
-    ; python -c "from scripts.run_models import train_models; train_models()"
-    ; python -c "from scripts.run_models import predict_models; predict_models('test')"
-    ; python -c "from scripts.eval_predictions import eval_predictions; eval_predictions()"
+    python -m unittest discover
+    python -c "from scripts.run_models import train_models; train_models()"
+    python -c "from scripts.run_models import predict_models; predict_models('test')"
+    python -c "from scripts.run_models import predict_models; predict_models('raw')"
+    python -c "from scripts.eval_predictions import eval_predictions; eval_predictions()"
